--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="app">
-		<div class="image">
+		<div class="display">
 			<div class="next-btn">Next</div>
 			<div class="prev-btn">Prev</div>
 		</div>
